--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,13 @@
 *.import
 addons/
 
-# Mono-specific ignores
-.mono/
-data_*/
-mono_crash.*.json
-
 # System/tool-specific ignores
 .directory
 *~
+
+# LibreOffice Temporary File
+*.~*
+
 user/
 
 
